--- a/_config.yml
+++ b/_config.yml
@@ -14,4 +14,4 @@ paginate: 5
 paginate_path: "page:num"
 permalink: /blog/:title.html
 
-exclude: ["node_modules", "Gruntfile.js", "bower.json", "package.json"]
+exclude: ["node_modules", "Gruntfile.js", "bower.json", "package.json", "publish.sh"]
