--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,15 @@ highlighter: pygments
 sass:
   sass_dir: scss
   style: compressed
-exclude: ["*.sublime-*"]
 
 paginate: 5
 paginate_path: "page:num"
 permalink: /blog/:title.html
 
-exclude: ["node_modules", "Gruntfile.js", "bower.json", "package.json", "publish.sh"]
+exclude: ["node_modules",
+          "Gruntfile.js",
+          "bower.json",
+          "package.json",
+          "publish.sh",
+          "README.md",
+          "*.sublime-*"]
