fixed feed.xml link issues

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 
 paginate: 5
 paginate_path: "page:num"
-permalink: /blog/:title.html
+permalink: blog/:title.html
 
 exclude: ["node_modules",
           "Gruntfile.js",
