cloudfront and selective foundation references

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Brian Lundin
 description: "Articles on code, tech, design and creativity from Brian Lundin"
 url: "http://code.brianlundin.com"
-cdn: http://cdn.code.brianlundin.com
+cdn: "http://cdn.brianlundin.com"
 
 markdown: redcarpet
 highlighter: pygments
