--- a/bower.json
+++ b/bower.json
@@ -2,5 +2,8 @@
   "name": "foundation-libsass-template",
   "dependencies": {
     "foundation": "zurb/bower-foundation"
+  },
+  "devDependencies": {
+    "html5shiv": "~3.7.2"
   }
 }
